cpp_runtime/libtorch_std_helper.h

void    torch_std_copy_probs(void* t, double* out, int n);
// ============================================================
// StaticPy array -> C pointer helpers
// ============================================================
void* torch_std_float_array_ptr(void* arr);
void* torch_std_int_array_ptr(void* arr);
void* torch_std_float_array_ptr_offset(void* arr, int offset);
void* torch_std_int_array_ptr_offset(void* arr, int offset);
void* torch_std_batch_norm1d(void* input, void* weight, void* bias,
                             void* running_mean, void* running_var,
                             int training, double momentum, double eps);
// ============================================================
// 损失函数
// ============================================================
void* torch_std_mse_loss(void* pred, void* target, const char* reduction);
void* torch_std_l1_loss(void* pred, void* target, const char* reduction);
void* torch_std_cross_entropy_loss(void* logits, void* target, const char* reduction);
void* torch_std_nll_loss(void* log_probs, void* target, const char* reduction);
void* torch_std_bce_loss(void* pred, void* target, const char* reduction);
void* torch_std_bce_with_logits_loss(void* logits, void* target, const char* reduction);
// ============================================================
// 自动微分
// ============================================================
void* torch_std_requires_grad(void* t);
void* torch_std_set_requires_grad(void* t, int requires_grad);
void  torch_std_backward(void* loss);
void  torch_std_backward_retain_graph(void* loss);
void* torch_std_grad(void* t);
void  torch_std_zero_grad(void* t);
int   torch_std_has_grad(void* t);
// ============================================================
// 优化器
// ============================================================
void* torch_std_sgd_create(void** params, int n, double lr, double momentum,
                           double dampening, double weight_decay, int nesterov);
void* torch_std_adam_create(void** params, int n, double lr,
                            double beta1, double beta2, double eps,
                            double weight_decay, int amsgrad);
void* torch_std_adamw_create(void** params, int n, double lr,
                             double beta1, double beta2, double eps,
                             double weight_decay, int amsgrad);
void  torch_std_optimizer_step(void* opt);
void  torch_std_optimizer_zero_grad(void* opt);
void  torch_std_optimizer_destroy(void* opt);
void* torch_std_masked_select(void* a, void* mask);
void* torch_std_where(void* condition, void* x, void* y);
void* torch_std_eq(void* a, void* b);
void* torch_std_gt(void* a, void* b);
void* torch_std_lt(void* a, void* b);
void* torch_std_ge(void* a, void* b);
void* torch_std_le(void* a, void* b);
void* torch_std_clamp(void* a, double min_val, double max_val);
void  torch_std_clip_grad_norm(void** params, int n, double max_norm);
void* torch_std_jit_forward(void* module, void* input_tensor);
void torch_std_jit_module_delete(void* module);
int   torch_std_jit_parameters(void* module, void** out_params, char** out_names, int max_n);
// ============================================================
// 模型参数序列化（支持 StaticPy 续训）
// ============================================================
int   torch_std_save_state_dict(void* module, const char* path);
void* torch_std_jit_load_module(const char* path);
// ============================================================
// SD UNet Forward with LoRA (training-gradable)
// ============================================================
void* torch_std_sd_unet_forward(
    void** weight_ptrs, int n_weights,
    void* input, void* timestep, void* text_emb,
    void** lora_A, void** lora_B,
    int* lora_target_indices, int n_lora,
    double lora_scale);
void  torch_std_save_image(void* tensor, const char* path, int as_pgm);
// ============================================================
// JIT Module parameter enumeration
// ============================================================
int torch_std_jit_named_parameters(void* module, void** out_ptrs,
                                    const char** out_names, int max_n);
void* torch_std_lora_apply(void* weight, void* lora_A, void* lora_B, double scale);
void* torch_std_image_composite(void* base, void* overlay, int x, int y);
void* torch_std_color_convert(void* img, const char* from, const char* to);
// ============================================================
// ControlNet
// ============================================================
void* torch_std_controlnet_forward(void** weight_ptrs, int n_weights,
                                    void* input, void* timestep,
                                    void* text_emb, void* hint,
                                    int num_hint_channels);
void* torch_std_controlnet_apply(void* unet_features, void* control_features,
                                  double strength);
// ============================================================
// LoRA merge into model dict
// ============================================================
int torch_std_lora_merge_into(void* model_dict, void* lora_dict,
                               const char* prefix, double scale);
// ============================================================
// PNG/JPEG (requires -DWITH_LIBPNG / -DWITH_LIBJPEG at build time)
// ============================================================
void* torch_std_load_image_png(const char* path);
void  torch_std_save_image_png(void* tensor, const char* path);
// ============================================================
// Flow Matching scheduler
// ============================================================
void* torch_std_fm_sigmas(int steps, double sigma_min, double sigma_max);
// ============================================================
// GLIGEN — gated cross-attention injection into SD UNet
// ============================================================
// Modified UNet forward with per-block GLIGEN gated attention.
// Same as torch_std_sd_unet_forward but with extra gligen params.
// gligen_objs: (B, N_objs, D) object embeddings from PositionNet
// gligen_alphas: (B, n_blocks, 2) [alpha_attn, alpha_dense] per transformer block
// gligen_block_indices: int array of block indices to apply gligen
// n_gligen_blocks: number of gligen blocks (0 = no gligen)
// ip_adapt_img: (B, N_img, D) IP-Adapter image embeddings (or NULL)
// ip_adapt_scale: IP-Adapter injection scale
void* torch_std_sd_unet_forward_v2(
    void** weight_ptrs, int n_weights,
    void* input_ptr, void* timestep_ptr, void* text_emb_ptr,
    void** lora_A_ptrs, void** lora_B_ptrs, int* lora_target_indices, int n_lora, double lora_scale,
    void* gligen_objs, void* gligen_alphas, int* gligen_block_indices, int n_gligen_blocks,
    void* ip_adapt_img, double ip_adapt_scale);
// ============================================================
// Stable Cascade Stage C — 主扩散模型 (transformer backbone)
// ============================================================
void* torch_std_stable_cascade_stage_c(
    void** weight_ptrs, int n_weights,
    void* x, void* r, void* timestep,
    void* clip_text, void* clip_text_pooled, void* clip_img);
// ============================================================
// PixArt — DiT (Diffusion Transformer)
// ============================================================
void* torch_std_pixart_forward(
    void** weight_ptrs, int n_weights,
    void* x, void* timestep, void* y,  // y = T5 text embeddings
    int height, int width, int patch_size);
// ============================================================
// Hunyuan Video — 3D UNet (FLUX-based with 3D input)
// ============================================================
void* torch_std_hunyuan_video_forward(
    void* sd_dict,
    void* x, void* timestep, void* text_emb,
    int n_frames, int height, int width);
// ============================================================
// Wan Video — 3D UNet with RoPE
// ============================================================
void* torch_std_wan_video_forward(
    void* sd_dict,
    void* x, void* timestep, void* text_emb,
    int n_frames, int height, int width);
// ============================================================
// Cosmos — Video diffusion model
// ============================================================
void* torch_std_cosmos_forward(
    void* sd_dict,
    void* x, void* timestep, void* text_emb,
    int n_frames, int height, int width);
// ============================================================
// SD3 MMDiT — Joint attention with text conditioning
// ============================================================
void* torch_std_sd3_mmdit_forward(
    void* sd_dict,          // safetensors dict (unordered_map<string, Tensor>)
    void* x,                // (B, C, H, W) latent
    void* timestep,         // (B,) timesteps
    void* y,                // (B, L, D) text/T5 embeddings
    double cfg_scale);      // guidance scale (CFG)