build_out/input.ss

(define torch_std_float_array_ptr
  (foreign-procedure "torch_std_float_array_ptr" (void*) void*))
(define torch_std_int_array_ptr
  (foreign-procedure "torch_std_int_array_ptr" (void*) void*))
(define torch_std_float_array_ptr_offset
  (foreign-procedure "torch_std_float_array_ptr_offset" (void* int) void*))
(define torch_std_int_array_ptr_offset
  (foreign-procedure "torch_std_int_array_ptr_offset" (void* int) void*))
(define torch_std_eq
  (foreign-procedure "torch_std_eq" (void* void*) void*))
(define torch_std_gt
  (foreign-procedure "torch_std_gt" (void* void*) void*))
(define torch_std_lt
  (foreign-procedure "torch_std_lt" (void* void*) void*))
(define torch_std_ge
  (foreign-procedure "torch_std_ge" (void* void*) void*))
(define torch_std_le
  (foreign-procedure "torch_std_le" (void* void*) void*))
(define torch_std_clamp
  (foreign-procedure "torch_std_clamp" (void* double double) void*))
(define torch_std_where
  (foreign-procedure "torch_std_where" (void* void* void*) void*))
(define torch_std_masked_select
  (foreign-procedure "torch_std_masked_select" (void* void*) void*))
(define torch_std_jit_forward
  (foreign-procedure "torch_std_jit_forward" (void* void*) void*))
(define torch_std_jit_module_delete
  (foreign-procedure "torch_std_jit_module_delete" (void*) void))
(define torch_std_jit_load_module
  (foreign-procedure "torch_std_jit_load_module" (string) void*))
(define torch_std_jit_named_parameters
  (foreign-procedure "torch_std_jit_named_parameters" (void* void* int) int))
(define torch_std_jit_parameters
  (foreign-procedure "torch_std_jit_parameters" (void* void* int) int))
(define torch_std_load_image_png
  (foreign-procedure "torch_std_load_image_png" (string) void*))
(define torch_std_save_image
  (foreign-procedure "torch_std_save_image" (void* string int) void))
(define torch_std_save_image_png
  (foreign-procedure "torch_std_save_image_png" (void* string) void))
(define torch_std_image_composite
  (foreign-procedure "torch_std_image_composite" (void* void* int int) void*))
(define torch_std_color_convert
  (foreign-procedure "torch_std_color_convert" (void* int int) void*))
(define torch_std_mse_loss
  (foreign-procedure "torch_std_mse_loss" (void* void* string) void*))
(define torch_std_l1_loss
  (foreign-procedure "torch_std_l1_loss" (void* string string) void*))
(define torch_std_cross_entropy_loss
  (foreign-procedure "torch_std_cross_entropy_loss" (void* void* string) void*))
(define torch_std_nll_loss
  (foreign-procedure "torch_std_nll_loss" (void* void* string) void*))
(define torch_std_bce_loss
  (foreign-procedure "torch_std_bce_loss" (void* void* string) void*))
(define torch_std_bce_with_logits_loss
  (foreign-procedure "torch_std_bce_with_logits_loss" (void* void* string) void*))
(define torch_std_copy_probs
  (foreign-procedure "torch_std_copy_probs" (void* double) void*))
(define torch_std_requires_grad
  (foreign-procedure "torch_std_requires_grad" (void*) int))
(define torch_std_set_requires_grad
  (foreign-procedure "torch_std_set_requires_grad" (void* int) void*))
(define torch_std_has_grad
  (foreign-procedure "torch_std_has_grad" (void*) int))
(define torch_std_grad
  (foreign-procedure "torch_std_grad" (void*) void*))
(define torch_std_backward
  (foreign-procedure "torch_std_backward" (void*) void))
(define torch_std_backward_retain_graph
  (foreign-procedure "torch_std_backward_retain_graph" (void*) void))
(define torch_std_zero_grad
  (foreign-procedure "torch_std_zero_grad" (void* int) void))
(define torch_std_clip_grad_norm
  (foreign-procedure "torch_std_clip_grad_norm" (void* int double) void))
(define torch_std_sgd_create
  (foreign-procedure "torch_std_sgd_create" (void* int double double double) void*))
(define torch_std_adam_create
  (foreign-procedure "torch_std_adam_create" (void* int double double double double double) void*))
(define torch_std_adamw_create
  (foreign-procedure "torch_std_adamw_create" (void* int double double double double double) void*))
(define torch_std_optimizer_step
  (foreign-procedure "torch_std_optimizer_step" (void*) void))
(define torch_std_optimizer_zero_grad
  (foreign-procedure "torch_std_optimizer_zero_grad" (void*) void))
(define torch_std_optimizer_destroy
  (foreign-procedure "torch_std_optimizer_destroy" (void*) void))
(define torch_std_controlnet_forward
  (foreign-procedure "torch_std_controlnet_forward" (void* int void* void* void* void* int) void*))
(define torch_std_controlnet_apply
  (foreign-procedure "torch_std_controlnet_apply" (void* void* double) void*))
(define torch_std_lora_apply
  (foreign-procedure "torch_std_lora_apply" (void* void* void* double) void*))
(define torch_std_lora_merge_into
  (foreign-procedure "torch_std_lora_merge_into" (void* void* string double) int))
(define torch_std_batch_norm1d
  (foreign-procedure "torch_std_batch_norm1d" (void* void* void* void* void* int double double) void*))
(define torch_std_sd_unet_forward
  (foreign-procedure "torch_std_sd_unet_forward" (void* void* void* void* void* void* int) void*))
(define torch_std_fm_sigmas
  (foreign-procedure "torch_std_fm_sigmas" (int double double) void*))
(define torch_std_save_state_dict
  (foreign-procedure "torch_std_save_state_dict" (void* string) void))
(define torch_std_sd_unet_forward_v2
  (foreign-procedure "torch_std_sd_unet_forward_v2" (void* int void* void* void* void* void* void* int double void* void* void* int void* double) void*))
(define torch_std_stable_cascade_stage_c
  (foreign-procedure "torch_std_stable_cascade_stage_c" (void* int void* void* void* void* void* void*) void*))
(define torch_std_pixart_forward
  (foreign-procedure "torch_std_pixart_forward" (void* int void* void* void* int int int) void*))
(define torch_std_hunyuan_video_forward
  (foreign-procedure "torch_std_hunyuan_video_forward" (void* void* void* void* int int int) void*))
(define torch_std_wan_video_forward
  (foreign-procedure "torch_std_wan_video_forward" (void* void* void* void* int int int) void*))
(define torch_std_cosmos_forward
  (foreign-procedure "torch_std_cosmos_forward" (void* void* void* void* int int int) void*))
(define torch_std_sd3_mmdit_forward
  (foreign-procedure "torch_std_sd3_mmdit_forward" (void* void* void* void* double) void*))

;; Source: <input>
